Aggiunte modifiche al sito

--- a/index.html
+++ b/index.html
@@ -186,8 +186,7 @@
             fino a consultare i log — tutto in <em>linguaggio naturale</em>, in locale, senza dipendere dal cloud.
           </p>
           <p>
-            Se ti piace questo progetto, esplora gli altri contenuti su <a href="https://www.youtube.com/@archetydev" target="_blank" rel="noopener">Archety.dev</a>
-            e iscriviti al canale YouTube. Grazie a <strong>Consoft</strong> per la collaborazione e il supporto.
+            Se ti piace questo progetto, esplora gli altri contenuti sul <a href="https://www.youtube.com/@ArchetyDev" target="_blank" rel="noopener">Canale YouTube</a>. Grazie a <strong>Consoft</strong> per la collaborazione e il supporto.
           </p>
         </div>
         <div class="card" style="background:#0c121b">
