--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
   <meta property="og:title" content="LLM per Kubernetes con Minikube – Archety.dev x Consoft" />
   <meta property="og:description" content="Un piccolo regalo: 10 video per creare un agente AI locale che parla con Kubernetes. Extra del mio intervento #4dev (3 Ottobre 2025)." />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="/assets/logo_consoft.png" />
+  <meta property="og:image" content="assets/logo_consoft.png" />
   <meta property="og:locale" content="it_IT" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="LLM per Kubernetes con Minikube – Archety.dev x Consoft" />
   <meta name="twitter:description" content="10 video per costruire un agente AI in locale che gestisce Kubernetes con Ollama e Minikube. Extra #4dev 03/10/2025." />
-  <meta name="twitter:image" content="/assets/logo_consoft.png" />
+  <meta name="twitter:image" content="assets/logo_consoft.png" />
 
   <style>
     :root{
@@ -150,7 +150,7 @@
         <span class="badge" aria-label="extra">Contenuto extra · LLM per Kubernetes</span>
 
         <div class="logo-consoft" aria-label="Consoft">
-          <img src="/assets/logo_consoft_bianco.png" alt="Logo Consoft" />
+          <img src="assets/logo_consoft_bianco.png" alt="Logo Consoft" />
         </div>
       </div>
 
