Aggiunte correzioni ortografiche

--- a/index.html
+++ b/index.html
@@ -385,13 +385,11 @@
                 <div class="card" style="background:#0c121b">
                     <h3 style="margin-top:0">Cosa impari in questa serie</h3>
                     <ul>
-                        <li>Installare <strong>Ollama</strong> e <strong>Minikube</strong> per un ambiente AI + K8s
-                            totalmente locale</li>
                         <li>Creare una <strong>Minimal API .NET</strong> per orchestrare il flusso</li>
                         <li>Scrivere prompt efficaci (incluso <strong>JSON Prompting</strong>) e deserializzare in C#
                         </li>
-                        <li>Usare l’LLM per <strong>creare</strong> e <strong>scalare</strong> Deployment, leggere Pod e
-                            <strong>recuperare log</strong></li>
+                        <li>Usare LLM per <strong>scalare</strong> Deployment, consultare lo status dei Pod e
+                            <strong>recuperare log di ogni pod</strong> in un namespace</li>
                     </ul>
                 </div>
             </div>
@@ -408,7 +406,7 @@
                         <h3 class="vtitle" id="v1-title">Prerequisiti, Ollama e Minikube</h3>
                     </div>
                     <p class="vdesc">Prepariamo l'ambiente locale: installiamo Ollama e Kubernetes Minikube e vediamo i
-                        prerequisiti per l’agente.</p>
+                        prerequisiti per l'agente.</p>
                     <div class="vactions">
                         <a class="btn" href="https://www.youtube.com/watch?v=3i7_NwDbswk" target="_blank"
                             rel="noopener">Guarda su YouTube</a>
@@ -428,7 +426,7 @@
                         <span class="vnum">02</span>
                         <h3 class="vtitle" id="v2-title">Minimal API .NET e dipendenze</h3>
                     </div>
-                    <p class="vdesc">Creiamo la Minimal API e configuriamo le dipendenze per far dialogare l’agente con
+                    <p class="vdesc">Creiamo la Minimal API e configuriamo le dipendenze per far dialogare l'agente con
                         LLM e Kubernetes.</p>
                     <div class="vactions">
                         <a class="btn" href="https://www.youtube.com/watch?v=idM5RsDrh6M" target="_blank"
@@ -470,7 +468,7 @@
                         <span class="vnum">04</span>
                         <h3 class="vtitle" id="v4-title">Service Ollama & prompt avanzati (Pt.2)</h3>
                     </div>
-                    <p class="vdesc">Affiniamo i prompt e completiamo l’integrazione per un dialogo robusto con
+                    <p class="vdesc">Affiniamo i prompt e completiamo l'integrazione per un dialogo robusto con
                         Kubernetes.</p>
                     <div class="vactions">
                         <a class="btn" href="https://www.youtube.com/watch?v=BVnxT5HlMMM" target="_blank"
@@ -491,7 +489,7 @@
                         <span class="vnum">05</span>
                         <h3 class="vtitle" id="v5-title">Chiamata a Ollama & istruzioni per K8s</h3>
                     </div>
-                    <p class="vdesc">Prima chiamata reale all’LLM per ottenere comandi concreti eseguibili sul cluster.
+                    <p class="vdesc">Prima chiamata reale all'LLM per ottenere comandi concreti eseguibili sul cluster.
                     </p>
                     <div class="vactions">
                         <a class="btn" href="https://www.youtube.com/watch?v=VQNuUcPl4FU" target="_blank"
@@ -513,7 +511,7 @@
                         <h3 class="vtitle" id="v6-title">JSON Prompting & deserializzazione</h3>
                     </div>
                     <p class="vdesc">Strutturiamo le risposte del modello in JSON e le convertiamo in oggetti C# pronti
-                        all’uso.</p>
+                        all'uso.</p>
                     <div class="vactions">
                         <a class="btn" href="https://www.youtube.com/watch?v=K-Mtbn48zNk" target="_blank"
                             rel="noopener">Guarda su YouTube</a>
@@ -533,7 +531,7 @@
                         <span class="vnum">07</span>
                         <h3 class="vtitle" id="v7-title">Servizio Kubernetes in Dependency Injection</h3>
                     </div>
-                    <p class="vdesc">Registriamo il servizio K8s nel DI Container per un’orchestrazione modulare e
+                    <p class="vdesc">Registriamo il servizio K8s nel DI Container per un'orchestrazione modulare e
                         scalabile.</p>
                     <div class="vactions">
                         <a class="btn" href="https://www.youtube.com/watch?v=iOKD09gJ6qk" target="_blank"
@@ -576,7 +574,7 @@
                         <h3 class="vtitle" id="v9-title">Scalare un Deployment in linguaggio naturale</h3>
                     </div>
                     <p class="vdesc">Da “porta a 5 repliche” a stato aggiornato del cluster: lo scaling controllato
-                        dall’agente AI.</p>
+                        dall'agente AI.</p>
                     <div class="vactions">
                         <a class="btn" href="https://www.youtube.com/watch?v=XFOzRTET-2w" target="_blank"
                             rel="noopener">Guarda su YouTube</a>
