--- a/index.html
+++ b/index.html
@@ -362,8 +362,8 @@
                 <div>
                     <h2 id="chi-sono-title">Chi sono</h2>
                     <p>
-                        Ciao! Sono <strong>Giovanni Pace</strong>, ingegnere informatico e docente. Con
-                        <strong>Archety.dev</strong> creo
+                        Ciao! Sono <strong>Giovanni Pace</strong>, ingegnere informatico e docente. Insieme a
+                        <strong>Consoft S.p.a.</strong> creiamo
                         percorsi tecnici su <em>AI/ML</em>, <em>DevOps</em>, <em>Cloud</em> e <em>Software
                             Engineering</em>, puntando su
                         esempi pratici, architetture pulite e strumenti concreti per portare le idee in produzione.
