Aggiunto link a GH

--- a/index.html
+++ b/index.html
@@ -350,6 +350,7 @@
                         YouTube</a>
                     <a class="btn" href="https://sharp4dev.sharpcoding.it/" target="_blank" rel="noopener">Conferenza
                         #4Dev</a>
+                    <a class="btn" href="https://github.com/johnnypax/llm-kubernetes-minikube-sharp4dev/tree/main/Minimal_Agent_RAG" target="_blank" rel="noopener">GitHub Repository</a>
 
                 </div>
             </div>
